# template_lib

./: .gitignore  CMakeLists.txt  README.md
src/: allocator.h  array.h  bits.h  flatmap.h  map.h
src/private/: common.h  hash_algorithm.h  map_slot_state.h  tlstatus.h  utility.h
tests/: CMakeLists.txt  test_array.c  test_flatmap_no_zero_mem.c  test_flatmap_zero_mem.c  test_hash_algorithm.c  test_map.c  test_utility.c
